refactor(FieldParam): 兼容 jdk8